--- a/02_upcomingsales.html
+++ b/02_upcomingsales.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>B&B Auction by Brian Bellendir</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 <style>
     /* Add this here or inside your styles.css */
         .notice-box {
@@ -30,10 +30,10 @@
         <p>"THE SOUND THAT SELLS"</p>
         <!-- Navigation -->
         <div class="navigation">
-            <a href="index.html" class="nav-item">Home</a>
-            <a href="upcomingsales.html" class="nav-item">Upcoming Sales</a>
-            <a href="pastsales.html" class="nav-item">Past Sales</a>
-            <a href="contactus.html" class="nav-item">Contact</a>
+            <a href="01_index.html" class="nav-item">Home</a>
+            <a href="02_upcomingsales.html" class="nav-item">Upcoming Sales</a>
+            <a href="03_pastsales.html" class="nav-item">Past Sales</a>
+            <a href="04_contactus.html" class="nav-item">Contact</a>
         </div>
     </div>
 
