Removed alpha folder and made all files a singles

--- a/Alpha/02_upcomingsales.html
+++ b/Alpha/02_upcomingsales.html
@@ -30,10 +30,10 @@
         <p>"THE SOUND THAT SELLS"</p>
         <!-- Navigation -->
         <div class="navigation">
-            <a href="01_index.html" class="nav-item">Home</a>
-            <a href="02_upcomingsales.html" class="nav-item">Upcoming Sales</a>
-            <a href="03_pastsales.html" class="nav-item">Past Sales</a>
-            <a href="04_contactus.html" class="nav-item">Contact</a>
+            <a href="Alpha/01_index.html" class="nav-item">Home</a>
+            <a href="Alpha/02_upcomingsales.html" class="nav-item">Upcoming Sales</a>
+            <a href="Alpha/03_pastsales.html" class="nav-item">Past Sales</a>
+            <a href="Alpha/04_contactus.html" class="nav-item">Contact</a>
         </div>
     </div>
 
