Updated files and structure

--- a/01_index.html
+++ b/01_index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>B&B Auction by Brian Bellendir</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <div class="header">
@@ -12,17 +12,15 @@
         <p>"THE SOUND THAT SELLS"</p>
         <!-- Navigation -->
         <div class="navigation">
-            <a href="Alpha/01_index.html" class="nav-item">Home</a>
-            <a href="Alpha/02_upcomingsales.html" class="nav-item">Upcoming Sales</a>
-            <a href="Alpha/03_pastsales.html" class="nav-item">Past Sales</a>
-            <a href="Alpha/04_contactus.html" class="nav-item">Contact</a>
+            <a href="01_index.html" class="nav-item">Home</a>
+            <a href="02_upcomingsales.html" class="nav-item">Upcoming Sales</a>
+            <a href="03_pastsales.html" class="nav-item">Past Sales</a>
+            <a href="04_contactus.html" class="nav-item">Contact</a>
         </div>
     </div>
 <p>B&B Auction Company LLC is a full service auction company.  We serve the Central Kansas area. We are a
     versitile Auction House capable of handling sales from small to large. </p>
     <hr>
-
-
 
 <br>
     <hr>
@@ -81,7 +79,7 @@
 
 
 <footer>
-    <a href="/images/SignedLogo.jpg"><img src="/images/SignedLogo.jpg" width="50px" height="40px"></a> &copy;2024-BAV Design Elements
+    <a href="SignedLogo.jpg"><img src="SignedLogo.jpg" width="50px" height="40px"></a> &copy;2024-BAV Design Elements
 </footer>
 </body>
 </html>
