--- a/03_pastsales.html
+++ b/03_pastsales.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>B&B Auction by Brian Bellendir</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <div class="header">
@@ -12,10 +12,10 @@
         <p>"THE SOUND THAT SELLS"</p>
         <!-- Navigation -->
         <div class="navigation">
-            <a href="Alpha/01_index.html" class="nav-item">Home</a>
-            <a href="Alpha/02_upcomingsales.html" class="nav-item">Upcoming Sales</a>
-            <a href="Alpha/03_pastsales.html" class="nav-item">Past Sales</a>
-            <a href="Alpha/04_contactus.html" class="nav-item">Contact</a>
+            <a href="01_index.html" class="nav-item">Home</a>
+            <a href="02_upcomingsales.html" class="nav-item">Upcoming Sales</a>
+            <a href="03_pastsales.html" class="nav-item">Past Sales</a>
+            <a href="04_contactus.html" class="nav-item">Contact</a>
         </div>
 
 
