--- a/04_contactus.html
+++ b/04_contactus.html
@@ -12,10 +12,10 @@
         <p>"THE SOUND THAT SELLS"</p>
         <!-- Navigation -->
         <div class="navigation">
-            <a href="01_index.html" class="nav-item">Home</a>
-            <a href="02_upcomingsales.html" class="nav-item">Upcoming Sales</a>
-            <a href="03_pastsales.html" class="nav-item">Past Sales</a>
-            <a href="04_contactus.html" class="nav-item">Contact</a>
+            <a href="index.html" class="nav-item">Home</a>
+            <a href="upcomingsales.html" class="nav-item">Upcoming Sales</a>
+            <a href="pastsales.html" class="nav-item">Past Sales</a>
+            <a href="contactus.html" class="nav-item">Contact</a>
         </div>
     </div>
 
