--- a/upcomingsales.html
+++ b/upcomingsales.html
@@ -41,7 +41,7 @@
 
 <p>
     <div class="upcomingsales">
-        <a href="McGlinn Estate Auction">McGlinn Estate Auction - Online Only (Sept.30 Bidding Opens)</a>
+        <a href="mcglinn.html">McGlinn Estate Auction - Online Only (Sept.30 Bidding Opens)</a>
         <a href="2025 Consignment Sale">2025 Fall Consignment Sale - October 25, 2025</a>
         <a href="Vintage Fishing">Vintage Fishing Lures and Equipment</a>
     </div>
