--- a/index.html
+++ b/index.html
@@ -20,10 +20,21 @@
     </div>
 <p>B&B Auction Company LLC is a full service auction company.  We serve the Central Kansas area. We are a
     versitile Auction House capable of handling sales from small to large. </p>
-    <hr>
+
+<hr style="height: 6px; border: none; background: linear-gradient(to right, #b22222, #000); border-radius: 3px;">
+<p style="font-weight: bold; color: blue;">Licensed Real Estate Agent</p>
+<hr class="divider">
+<p style="font-weight: bold; color: blue;">Federal Firearms License Holder</p>
+<hr style="height: 6px; border: none; background: linear-gradient(to right, #b22222, #000); border-radius: 3px;">
+
+<p>
+    Are you in search of a trustworthy auction company in central Kansas? Your search ends here! We provide full-service sales for various situations such as land, real estate, firearms, estates, personal property, retirement sales, business liquidation, consignment sales, charity and events, and personal property appraisals. Our team of experts can handle sales of any size with ease. Get in touch with us today to know more about our!
+</p>
 
 <br>
-    <hr>
+
+<hr>
+
     <table border="0" class="centered-table">
         <tr>
             <bold><th>AUCTION TYPES</th></bold>
@@ -51,6 +62,11 @@
         </tr>
     </table>
 </p>
+
+<div style="display: flex; justify-content: space-between; margin-top: 40px;">
+    <img src="auctionhouse.avif" alt="Image 1" style="width: 48%; height: auto;">
+    <img src="auctionhouse2.avif" alt="Image 2" style="width: 48%; height: auto;">
+</div>
 
 <!-- Visitor Counter Box -->
   <div id="counter-box">
