Updated upcoming sales with stacked, center buttons

--- a/mcglinn.html
+++ b/mcglinn.html
@@ -19,10 +19,11 @@
         </div>
     </div>
 
-<h2 class="sale-title">
+<h2 class="sale-title" style="text-align: center;">
   Tom and Joann McGlinn Estate Sale<br>
   Bidding Opens Oct 1, 2025
 </h2>
+
 
 
 <break>
