--- a/elzeyauctionpast.html
+++ b/elzeyauctionpast.html
@@ -5,6 +5,24 @@
     <title>B&B Auction by Brian Bellendir</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css">
+<style>
+    /* Add this here or inside your styles.css */
+        .notice-box {
+            border: 2px solid #000;
+            padding: 20px;
+            width: 300px;   /* adjust width */
+            margin: 20px 0 0 20px;  /* pushes it down and away from the edge */
+            text-align: left;
+            line-height: 1.6;
+            background-color: #f9f9f9; /* subtle background for readability */
+        }
+
+        .notice-box h1,
+        .notice-box h2,
+        .notice-box p {
+            margin: 0 0 10px 0;
+        }
+</style>
 </head>
 <body>
     <div class="header">
@@ -17,17 +35,4 @@
             <a href="pastsales.html" class="nav-item">Past Sales</a>
             <a href="contactus.html" class="nav-item">Contact</a>
         </div>
-
-
     </div>
-
-    <p>
-    <div class="upcomingsales">
-        <a href="elzeyauctionpast.html">Terry Elzey Auction</a>
-        <a href="Dennis Funk Moving Sale">Dennis Funk Moving Sale</a>
-        <a href="Simpson Estate">Simpson Estate Sale</a>
-        <a href="160 Acres Stafford">160 Acres Stafford County</a>
-    </div>
-</p>
-</body>
-</html>
