3 photos testing added to elzy auction html page

--- a/elzeyauctionpast.html
+++ b/elzeyauctionpast.html
@@ -36,3 +36,9 @@
             <a href="contactus.html" class="nav-item">Contact</a>
         </div>
     </div>
+
+    <div style="display: flex; justify-content: no-space-between; margin-top: 20px;">
+    <img src="ElzeyAuction/500.avif" alt="Image 1" style="width: 35%; height: auto;">
+    <img src="ElzeyAuction/oldlanterns.avif" alt="Image 2" style="width: 35%; height: auto;">
+    <img src="ElzeyAuction/oldtractor.avif" alt="Image 3" style="width: 35%; height: auto;">
+</div>
