Add facebook logo on the index. Embed visitor Embeds visitor counter

--- a/ElzeyAuction/elzeyauctionpast.html
+++ b/ElzeyAuction/elzeyauctionpast.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>B&B Auction by Brian Bellendir</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../style.css">
 <style>
     /* Add this here or inside your styles.css */
         .notice-box {
@@ -30,15 +30,15 @@
         <p>"THE SOUND THAT SELLS"</p>
         <!-- Navigation -->
         <div class="navigation">
-            <a href="index.html" class="nav-item">Home</a>
-            <a href="upcomingsales.html" class="nav-item">Upcoming Sales</a>
-            <a href="pastsales.html" class="nav-item">Past Sales</a>
-            <a href="contactus.html" class="nav-item">Contact</a>
+            <a href="../index.html" class="nav-item">Home</a>
+            <a href="../upcomingsales.html" class="nav-item">Upcoming Sales</a>
+            <a href="../pastsales.html" class="nav-item">Past Sales</a>
+            <a href="../contactus.html" class="nav-item">Contact</a>
         </div>
     </div>
 
     <div style="display: flex; justify-content: no-space-between; margin-top: 20px;">
-    <img src="ElzeyAuction/500.avif" alt="Image 1" style="width: 35%; height: auto;">
-    <img src="ElzeyAuction/oldlanterns.avif" alt="Image 2" style="width: 35%; height: auto;">
-    <img src="ElzeyAuction/oldtractor.avif" alt="Image 3" style="width: 35%; height: auto;">
+    <img src="500.avif" alt="Image 1" style="width: 35%; height: auto;">
+    <img src="oldlanterns.avif" alt="Image 2" style="width: 35%; height: auto;">
+    <img src="oldtractor.avif" alt="Image 3" style="width: 35%; height: auto;">
 </div>
