--- a/pastsales.html
+++ b/pastsales.html
@@ -23,7 +23,7 @@
 
     <p>
     <div class="upcomingsales">
-        <a href="elzeyauctionpast.html">Terry Elzey Auction</a>
+        <a href="ElzeyAuction/elzeyauctionpast.html">Terry Elzey Auction</a>
         <a href="Dennis Funk Moving Sale">Dennis Funk Moving Sale</a>
         <a href="Simpson Estate">Simpson Estate Sale</a>
         <a href="160 Acres Stafford">160 Acres Stafford County</a>
