--- a/contactus.html
+++ b/contactus.html
@@ -9,6 +9,7 @@
 <body>
     <div class="header">
         <h1>B & B Auction Company LLC</h1>
+        <h2 class="highlight-name">Brian J. Bellendir</h2>
         <p>"THE SOUND THAT SELLS"</p>
         <!-- Navigation -->
         <div class="navigation">
@@ -21,6 +22,7 @@
 
     <div class="contact-info">
         <p>B&amp;B Auction Co. LLC</p>
+        <p>Brian J. Bellendir</p>
         <p>Call (620) 617-6649</p>
         <p>188 N. US281 Highway</p>
         <p>Great Bend, Kansas</p>
