--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="header">
         <h1>B & B Auction Company LLC</h1>
+        <h2 class="highlight-name">Brian J. Bellendir</h2>
         <p>"THE SOUND THAT SELLS"</p>
         <!-- Navigation -->
         <div class="navigation">
